// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[mutagen agentGroups config import-export] should create the agentGroups: the agentGroups have been created 1`] = `
Object {
  "stderr": "",
  "stdout": "+ agentgroup [Environment/cfgObjectTest]
Completed. 1 object created. 0 object updated. 0 object skipped.
",
}
`;

exports[`[mutagen agentGroups config import-export] should skip the same agentGroups: the agentGroups have been updated 1`] = `
Object {
  "stderr": "",
  "stdout": "= agentgroup [Environment/cfgObjectTest]
Completed. 0 object created. 0 object updated. 1 object skipped.
",
}
`;

exports[`[mutagen agentGroups config import-export] should update the modified agentGroups: the modified agentGroups have been updated 1`] = `
Object {
  "stderr": "",
  "stdout": "~ agentgroup [Environment/cfgObjectTest]
Completed. 0 object created. 1 object updated. 0 object skipped.
",
}
`;
